[package]
name = "tuli"
version = "0.1.1"
description = "An experimental local server for serving static files that sort of works (Do not use, very experimental)"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"
keywords = ["server", "static", "serve_static", "static_files"]
repository = "https://github.com/collinsmuriuki/tuli"
readme = "README.md"
license = "MIT"

[lib]
name = "tuli_lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive ="0.1.5"
chunked_transfer = "1.4.0"